# www

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
.sqlx/: query-49a38b27e4579a04cb675bbd7ca0ae43141af7f2849e0a10e9d902cd69f3db9a.json  query-e82ec9f258c45b7b45fae538ec700bc95b7fdae92c8aec0b675faf1837c8334f.json
backend/: Cargo.toml  build.rs
backend/src/: cache.rs  clickhouse.rs  database.rs  deserialize.rs  env.rs  files.rs  lib.rs  logger.rs  main.rs  payload.rs  prelude.rs  requests.rs  response.rs  s3.rs  utils.rs
backend/src/models/: build.rs  config.rs  file.rs  mod.rs  organization.rs  type.rs  user.rs  version.rs
backend/src/routes/: files.rs  mod.rs
backend/src/routes/api/: github.rs  mod.rs
backend/src/routes/api/organization/: mod.rs
backend/src/routes/api/organization/v1/: mod.rs  types.rs
backend/src/routes/api/user/: logout.rs  mod.rs
backend/src/routes/api/user/admin/: mod.rs  stats.rs
backend/src/routes/api/user/invites/: mod.rs
backend/src/routes/api/user/invites/_organization_/: accept.rs  decline.rs  mod.rs
backend/src/routes/api/user/organizations/: mod.rs
backend/src/routes/api/user/organizations/_organization_/: icon.rs  mod.rs  stats.rs
backend/src/routes/api/user/organizations/_organization_/api_keys/: _key_.rs  mod.rs
backend/src/routes/api/user/organizations/_organization_/subusers/: _subuser_.rs  mod.rs
backend/src/routes/api/v1/: build.rs  mod.rs  stats.rs  types.rs
backend/src/routes/api/v1/builds/_type_/: mod.rs
backend/src/routes/api/v1/builds/_type_/_version_/: _build_.rs  mod.rs
backend/src/routes/api/v1/script/: mod.rs
backend/src/routes/api/v1/script/_build_/: bash.rs  mod.rs  powershell.rs
backend/src/routes/api/v1/version/: mod.rs
backend/src/routes/api/v1/version/_version_/: builds.rs  mod.rs
backend/src/routes/api/v2/: build.rs  config.rs  configs.rs  mod.rs  types.rs
backend/src/routes/api/v2/builds/_type_/: _version_.rs  mod.rs
backend/src/routes/api/v2/lookups/: mod.rs
backend/src/routes/api/v2/lookups/types/: history.rs  mod.rs
backend/src/routes/api/v2/lookups/versions/: history.rs  mod.rs
backend/src/routes/api/v2/lookups/versions/_type_/: history.rs  mod.rs
backend/src/routes/api/v2/requests/: mod.rs
backend/src/routes/api/v2/requests/_type_/: history.rs  mod.rs
backend/src/routes/api/v2/requests/version/_version_/: history.rs  mod.rs
backend/src/routes/api/v2/stats/: mod.rs
backend/src/routes/api/v2/stats/_type_/: history.rs  mod.rs
backend/src/routes/api/v2/stats/_type_/_version_/: history.rs  mod.rs
backend/src/routes/api/v2/stats/version/_version_/: history.rs  mod.rs
backend/src/routes/api/v3/: mod.rs
backend/src/routes/api/v3/builds/: mod.rs  search.rs
backend/src/routes/api/v3/builds/_build_/: configs.rs  mod.rs
backend/src/routes/api/v3/builds/types/: mod.rs
backend/src/routes/api/v3/builds/types/_type_/: mod.rs
backend/src/routes/api/v3/builds/types/_type_/versions/: mod.rs
backend/src/routes/api/v3/builds/types/_type_/versions/_version_/: latest.rs  mod.rs
backend/src/routes/api/v3/configs/: format.rs  identify.rs  mod.rs
backend/src/routes/api/v3/configs/_config_/: mod.rs
backend/src/routes/index/: mod.rs
backend/src/routes/index/_type_/: mod.rs
backend/src/routes/index/_type_/_version_/: _build_.rs  mod.rs
backend/src/routes/index/_type_/_version_/_build_/: changelog.rs  mod.rs
backend/static/: api.html  index.html
database/: drizzle.config.ts  package.json  pnpm-lock.yaml
database/clickhouse-migrations/: 0000.sql  0001.sql  0002.sql
database/migrations/: 0014_smart_nightshade.sql  0015_fat_leopardon.sql  0016_wonderful_mister_sinister.sql  0017_early_onslaught.sql  0018_flat_the_santerians.sql  0019_rapid_katie_power.sql  0020_premium_meltdown.sql  0021_mushy_monster_badoon.sql  0022_square_king_cobra.sql  0023_perpetual_boomer.sql  0024_new_tiger_shark.sql  0025_pretty_morlun.sql  0026_odd_sugar_man.sql  0027_sudden_joystick.sql  0028_brave_selene.sql  0029_shocking_bug.sql  0030_classy_timeslip.sql  0031_tiny_hellion.sql  0032_nasty_bromley.sql  0033_abnormal_redwing.sql  0034_red_polaris.sql  0035_huge_mentallo.sql  0036_normal_shadow_king.sql  0037_mushy_kingpin.sql  0038_abandoned_doctor_strange.sql  0039_outgoing_nekra.sql
database/migrations/meta/: 0014_snapshot.json  0015_snapshot.json  0016_snapshot.json  0017_snapshot.json  0018_snapshot.json  0019_snapshot.json  0020_snapshot.json  0021_snapshot.json  0022_snapshot.json  0023_snapshot.json  0024_snapshot.json  0025_snapshot.json  0026_snapshot.json  0027_snapshot.json  0028_snapshot.json  0029_snapshot.json  0030_snapshot.json  0031_snapshot.json  0032_snapshot.json  0033_snapshot.json  0034_snapshot.json  0035_snapshot.json  0036_snapshot.json  0037_snapshot.json  0038_snapshot.json  0039_snapshot.json  _journal.json
database/src/: index.ts  migrate-clickhouse.ts  schema.ts
database/src/globals/: clickhouse.ts  database.ts  env.ts  logger.ts
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: install.sh
frontend/src/: main.tsx
frontend/src/api/: build.ts  builds.ts  config.ts  index.ts  stats.ts  versions.ts
frontend/src/components/: app-sidebar.tsx  user-tooltip.tsx
frontend/src/pages/: config.tsx  index.tsx  job-status.tsx  lookup.tsx  organizations.tsx
functions/: [[any]].ts  html.d.ts  tsconfig.json
public/: install.sh
src/: App.tsx  global.css  main.tsx
src/api/: build.ts  builds.ts  config.ts  index.ts  stats.ts  types.ts  versions.ts
src/api/lookups/: types.ts  versions.ts
src/components/: ad.tsx  app-sidebar.tsx  folia-flowchart.tsx  folia-trivia.tsx  job-status.tsx  spigot-warning.tsx  user-tooltip.tsx  waterfall-warning.tsx
src/hooks/: use-auth.tsx  use-mobile.tsx  use-toast.ts
src/lib/: utils.ts
src/pages/: 404.tsx  index.tsx  job-status.tsx  lookup.tsx  organizations.tsx
(+52 files in other folders)
