[workspace]
resolver = "2"
members = ["backend"]

[patch.crates-io]
compact_str = { git = "https://github.com/ParkMyCar/compact_str.git" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = false

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
debug = "limited"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
debug = "limited"
