[package]
name = "api"
version = "3.9.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
colored = "3.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "ipnetwork"] }
dotenvy = "0.15.7"
rustis = "0.17.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1.43.0", features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "preserve_order", "chrono", "indexmap"] }
utoipa-axum = "0.2.0"
chrono = { version = "0.4.40", features = ["serde"] }
indexmap = { version = "2.7.1", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "normalize-path"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing-appender = "0.2.3"
sentry = { version = "0.46.0", default-features = false, features = ["rustls", "reqwest", "backtrace", "contexts", "debug-images", "panic"] }
sentry-tower = { version = "0.46.0", default-features = false, features = ["http", "axum-matched-path"] }
sentry-anyhow = "0.46.0"
reqwest = { version = "0.13.1", features = ["json"] }
compact_str = { git = "https://github.com/0x7d8/compact_str.git", version = "0.9.0", features = ["serde", "utoipa", "sqlx", "sqlx-postgres", "sqlx-mysql"] }
sha2 = "0.10.8"
rand = "0.9.0"
serde_yaml = "0.9.34"
toml = "0.9.4"
image = "0.25.5"
tower-cookies = "0.11.0"
rust-s3 = { version = "0.37.0", default-features = false, features = ["tokio-rustls-tls"] }
futures-util = "0.3.31"
tower = "0.5.2"
include_dir = "0.7.4"
json5 = "1.3.0"
serde_arrays = "0.2.0"
human_bytes = "0.4.3"
tokio-util = { version = "0.7.16", features = ["full"] }
clickhouse = { version = "0.14.0", features = ["rustls-tls", "inserter", "chrono"] }
anyhow = "1.0.100"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6.0"
